# hfst-ospell

./: .gitattributes  .gitignore  .travis.yml  .uncrustify.cfg  CITATION.cff  CMakeLists.txt  Makefile.am  ZHfstOspeller.cc  ZHfstOspeller.h  ZHfstOspellerXmlMetadata.cc  ZHfstOspellerXmlMetadata.h  configure.ac  hfst-ol.cc  hfst-ol.h  hfst-ospell-office.1  hfst-ospell.1  hfstospell.pc.in  main-cicling.cc  main-fsmnlp-2012.cc  main-ispell.cc  main-lrec2013.cc  main-norvig.cc  main-survey.cc  main.cc  office.cc  ol-exceptions.h  ospell.cc  ospell.h  predict.cc  windows-Makefile.am  windows-configure.ac
src/: CMakeLists.txt  liboffice.cc  liboffice.h  office.cc  ol-exceptions.h
